<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2015 - 2017
  ~
  ~ Permission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"),
  ~ to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense,
  ~ and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:
  ~
  ~ The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
  ~
  ~ THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  ~ FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
  ~ LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER
  ~ DEALINGS IN THE SOFTWARE.
  -->

<resources>
	<string name="app_name">JSettlers</string>
	<string name="please_wait">Please wait</string>

	<string name="save_string">Save</string>
	<string name="stop_string">Stop</string>
	<string name="kill_string">Kill</string>
	<string name="unload_string">Unload</string>
	<string name="load_string">Load game</string>
	<string name="pause_string">Pause</string>
	<string name="plus_string">+</string>
	<string name="minus_string">-</string>

	<string name="local_game">Local game</string>
	<string name="local_game_new">New game</string>
	<string name="local_game_load">Load game</string>
	<string name="local_game_resume">Resume last game</string>
	<string name="local_game_resume_error">There was an error while loading the game.</string>
	<string name="network_game">Network game</string>
	<string name="startscreen_network_new">New game</string>
	<string name="startscreen_network_join">Join game</string>
	<string name="startscreen_network_load">Load saved game</string>

	<string name="game_title">Welcome to JSettlers</string>

	<string name="maplist_local_new_headline">Start new game</string>
	<string name="maplist_local_new_submit">Start</string>
	<string name="maplist_local_load_headline">Load saved game</string>
	<string name="maplist_local_load_submit">Load</string>
	<string name="maplist_network_new_headline">Start a new network game</string>
	<string name="maplist_network_new_submit">Start</string>
	<string name="maplist_network_join_headline">Join network game</string>
	<string name="maplist_network_join_submit">Join</string>

	<string name="player_count">Player count</string>
	<string name="illegal_playercount">Invalid player count</string>
	<string name="illegal_playercount_too_high">The player count is too high</string>
	<string name="illegal_playercount_too_low">The player count is too low</string>

	<string name="send">Send</string>
	<string name="accept_start">Ready</string>
	<string name="local_game_delete">Delete saved game</string>
	<string name="network_start">Start</string>
	<string name="preferences_playername">Your name</string>
	<string name="preferences_server">Network server address</string>
	<string name="preferences_ok">Save</string>
	<string name="network_chat">Chat…</string>
	<string name="chat_hint">Message to all players</string>
	<string name="filechoser_ok">Use this directory</string>
	<string name="filechoser_message">Where are the GFX and SND folders?</string>

	<!-- New stuff -->

	<!-- In Game -->
	<!-- Selection Menus -->
	<!-- Common -->
	<string name="halt">Halt</string>
	<string name="ask_destroy">Destroy this building?</string>

	<!-- Carriers Selection -->
	<string name="convert_all">Convert all</string>
	<string name="convert_one">Convert one</string>

	<!-- Settlers Menu: Specialists -->
	<string name="specialists_carriers">Carriers: %d</string>
	<string name="specialists_add_one">+1</string>
	<string name="specialists_add_five">+5</string>
	<string name="specialists_add_all">+All</string>
	<string name="specialists_remove_one">-1</string>
	<string name="specialists_remove_all">-All</string>

	<!-- Specialists Selection -->
	<string name="convert_to_carriers">Convert to carriers</string>
	<string name="work_here">Work here</string>

	<!-- Soldiers Selection -->
	<string name="confirm_kill">Kill soldiers?</string>
	<string name="yes">Yes</string>


	<!-- Main Menus -->
	<!-- Settings -->
	<string name="settings_player_name">Player name</string>
	<string name="settings_name">Name</string>

	<!-- Map picker -->
	<string name="new_single_player_game">New Single-Player Game</string>
	<string name="new_multi_player_game">New Multi-Player Game</string>
	<string name="load_single_player_game">Load Single-Player Game</string>
	<string name="join_multi_player_game">Join Multi-Player Game</string>
	<string name="searching_for_multiplayer_games">Searching games…</string>

	<!-- game config -->
	<string name="number_of_players">Players</string>
	<string name="start_resources">Resources</string>
	<string name="peacetime">Peacetime</string>


	<!-- Other -->
	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>
	<string name="settings">Settings</string>

	<string name="resource_directory_title">Graphics and sound folders</string>
	<string name="resource_directory_info">JSettlers requires the GFX and SND folders from an original copy of Settlers 3. Install Settlers 3 on your computer and find those folders, then copy them to your Android device.</string>
	<string name="resource_directory_button">Locate folders</string>

	<string name="menu_single_player_title">Single-Player</string>
	<string name="menu_single_player_info">Create a battle with computer opponents.</string>

	<string name="menu_multi_player_title">Multi-Player</string>
	<string name="menu_multi_player_info">Challenge your friends on phone, tablet or desktop.</string>

	<string name="menu_game_in_progress">Game in progress</string>
	<string name="menu_new">Start</string>
	<string name="menu_load">Load</string>
	<string name="menu_join">Join</string>

	<string name="start_game">Start game</string>

	<string name="game_menu_title">Menu</string>
	<string name="minimap_show">Show minimap</string>
	<string name="minimap_hide">Hide minimap</string>
	<string name="game_menu_quit">Quit</string>
	<string name="game_menu_quit_confirm">Sure?</string>
	<string name="game_menu_save">Save</string>
	<string name="game_menu_pause">Pause</string>
	<string name="game_menu_unpause">Unpause</string>
	<string name="game_menu_paused">Paused</string>
	<string name="game_menu_saved">Game saved</string>
	<string name="game_menu_skip_minute">Skip 1 minute</string>
	<string name="game_menu_speed_title">Game speed x%.1f</string>
	<string name="game_menu_speed_normal">Normal</string>
	<string name="game_menu_speed_fast">Fast</string>
	<string name="game_menu_players">Players</string>
	<string name="players_title">Players</string>
	<string name="players_close">Close</string>
	<string name="players_team">Team %d</string>
	<string name="game_menu_statistics">Statistics</string>
	<string name="statistics_title">Statistics</string>
	<string name="statistics_endgame_title">Game result</string>
	<string name="statistics_continue">Continue</string>
	<string name="statistics_no_data">No statistics recorded yet</string>
	<string name="statistics_time_axis">Game time (h:mm), recorded every game minute</string>
	<string name="statistics_rank" translatable="false">%d.</string>
	<string name="statistics_game_ended">Game ended after %s</string>
	<string name="statistics_game_ended_no_time">Game ended</string>

	<string name="no_saved_games">No saved games available</string>
	<string name="resource_selection_dialog_title">Locate GFX and SND folders</string>
	<string name="empty_directory">This directory is empty</string>
	<string name="notification_game_in_progress">JSettlers game in progress</string>
	<string name="faster">Faster</string>
	<string name="slower">Slower</string>
	<string name="fast">Fast Speed</string>
	<string name="buildings">Buildings</string>
	<string name="goods">Goods</string>
	<string name="settlers">Settlers</string>
	<string name="multiplayer_not_all_players_ready">All players must be ready to start the match.</string>
	<string name="normal">Normal Speed</string>

	<string name="service_description">JSettlers Game Service running the current game.</string>
	<string name="dock">Dock</string>
	<string name="destination">Dest.</string>
	<string name="goods_stock_title">Global storage</string>
	<string name="global_stock_message">Global storage settings must be set in one of your own settlements.</string>
	<string name="own_territory_message">Move the view over one of your own settlements to change these settings.</string>
	<string name="settlers_statistics_total">Total</string>
	<string name="goods_inventory_title">Inventory</string>
	<string name="good_distribution_title">Distribution</string>
	<string name="confirm_destory_ships">Destroy ships?</string>
	<string name="notification_channel_id">gameplay</string>
	<string name="ask_workarea">Choose work area</string>
	<string name="ask_dock">Choose dock position</string>
	<string name="ask_spell">Choose spell position</string>
	<string name="menu_multi_player_start_server">Start server</string>
	<string name="settings_server_address">Server address</string>
	<string name="settings_address">Address</string>
	<string name="menu_multi_player_stop_server">Stop server</string>
	<string name="settings_play_all_music">play all music</string>
	<!-- Settlers United launcher mode -->
	<string name="su_launch_game_running">A game is running – the launcher start was ignored.</string>
	<string name="su_launch_invalid">Launcher start not possible (%1$s). Please update JSettlers or the launcher.</string>
	<string name="su_launch_no_data">The Settlers III data is missing – set it up in JSettlers first.</string>
	<string name="su_launch_server_failed">Could not start the server: %1$s</string>
	<string name="su_join_timeout">The host\'s match did not show up – pick it from the list as soon as it appears.</string>
	<string name="su_join_map_missing">The host\'s map is missing on this device – the game cannot be joined.</string>
	<string name="su_wait_title">Starting game</string>
	<string name="su_wait_preparing">Preparing the map…</string>
	<string name="su_wait_players">%1$s\nPlayers connected: %2$d of %3$d, ready: %4$d</string>
	<string name="su_wait_cancel">Cancel</string>
	<string name="su_start_failed">The game could not be started (%1$s).</string>
	<string name="su_start_timeout">The game did not start within %1$d seconds.</string>
	<string name="su_map_missing">The map %1$s is missing on this device.</string>
	<string name="connection_interrupted">Connection interrupted – reconnecting …</string>
	<string name="connection_waiting_for">Waiting for %1$s – reconnecting …</string>
	<string name="connection_restored">Connection restored</string>
	<string name="connection_lost">Connection to the game lost</string>
	<string name="settings_audio">Audio</string>
	<string name="settings_music_enabled">Play music</string>
	<string name="settings_music_volume">Music volume</string>
	<string name="settings_sound_volume">Sound effects volume</string>
	<string name="settings_volume_percent">%d %%</string>
	<string name="move_to_title">Move</string>
	<string name="move_to_normal">Normal</string>
	<string name="move_to_forced">Forced</string>
	<string name="move_to_waypoint">Waypoint</string>
	<string name="move_to_patrol">Patrol</string>
</resources>
