<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:id="@+id/layout_specialists"
			  android:layout_width="match_parent"
			  android:layout_height="match_parent"
			  android:orientation="vertical"
			  android:paddingLeft="8dp"
			  android:paddingRight="8dp"
			  android:paddingBottom="40dp">

	<TextView
		android:id="@+id/text_view_carriers"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_gravity="center_horizontal"
		android:gravity="center_vertical"
		android:minHeight="48dp"/>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/image_view_pioneer"
			android:layout_width="@dimen/menu_tile_waiting_height"
			android:layout_height="@dimen/menu_tile_occupied_height"
			android:scaleType="fitCenter"/>

		<TextView
			android:id="@+id/text_view_pioneers"
			android:layout_width="40dp"
			android:layout_height="wrap_content"
			android:gravity="center"/>

		<Button
			android:id="@+id/button_pioneer_add_one"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_one"/>
		<Button
			android:id="@+id/button_pioneer_add_five"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_five"/>
		<Button
			android:id="@+id/button_pioneer_add_all"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_all"/>
		<Button
			android:id="@+id/button_pioneer_remove_one"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_remove_one"/>
		<Button
			android:id="@+id/button_pioneer_remove_all"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_remove_all"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/image_view_geologist"
			android:layout_width="@dimen/menu_tile_waiting_height"
			android:layout_height="@dimen/menu_tile_occupied_height"
			android:scaleType="fitCenter"/>

		<TextView
			android:id="@+id/text_view_geologists"
			android:layout_width="40dp"
			android:layout_height="wrap_content"
			android:gravity="center"/>

		<Button
			android:id="@+id/button_geologist_add_one"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_one"/>
		<Button
			android:id="@+id/button_geologist_add_five"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_five"/>
		<Button
			android:id="@+id/button_geologist_add_all"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_all"/>
		<Button
			android:id="@+id/button_geologist_remove_one"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_remove_one"/>
		<Button
			android:id="@+id/button_geologist_remove_all"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_remove_all"/>
	</LinearLayout>

	<LinearLayout
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:gravity="center_vertical"
		android:orientation="horizontal">

		<ImageView
			android:id="@+id/image_view_thief"
			android:layout_width="@dimen/menu_tile_waiting_height"
			android:layout_height="@dimen/menu_tile_occupied_height"
			android:scaleType="fitCenter"/>

		<TextView
			android:id="@+id/text_view_thieves"
			android:layout_width="40dp"
			android:layout_height="wrap_content"
			android:gravity="center"/>

		<Button
			android:id="@+id/button_thief_add_one"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_one"/>
		<Button
			android:id="@+id/button_thief_add_five"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_five"/>
		<Button
			android:id="@+id/button_thief_add_all"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_add_all"/>
		<Button
			android:id="@+id/button_thief_remove_one"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_remove_one"/>
		<Button
			android:id="@+id/button_thief_remove_all"
			style="?android:attr/buttonStyleSmall"
			android:layout_width="0dp"
			android:layout_height="wrap_content"
			android:layout_weight="1"
			android:minWidth="0dp"
			android:text="@string/specialists_remove_all"/>
	</LinearLayout>

</LinearLayout>
